# shorts_automation_project

./: README.md  main.py  pyproject.toml  requirements.txt
src/: add_text.py  download_video.py  generate_text.py  generate_topics.py  stitch.py
